# rs-paint

./: Cargo.toml  LICENSE  README.md
css/: style.css
src/: cli.rs  clipboard.rs  geometry.rs  image.rs  main.rs  shape.rs  transformable.rs  ui.rs  undo.rs  util.rs
src/image/: bitmask.rs  blend.rs  brush.rs  generate.rs  io.rs  resize.rs  scale.rs  selection.rs  transform.rs  undo.rs
src/image/undo/: action.rs  tree.rs
src/ui/: canvas.rs  dialog.rs  form.rs  icon.rs  infobar.rs  io.rs  layer_window.rs  layers.rs  layers_ui.rs  menu.rs  mode.rs  selection.rs  tab.rs  toolbar.rs
src/ui/dialog/: form.rs  info.rs  nary.rs
src/ui/form/: gadget.rs
src/ui/mode/: cursor.rs  pencil.rs  rectangle_select.rs
src/ui/toolbar/: mode.rs  palette.rs  pallete.rs
src/ui/toolbar/mode/: cursor.rs  eyedropper.rs  fill.rs  free_transform.rs  insert_shape.rs  magic_wand.rs  mode_toolbar.rs  pencil.rs  rectangle_select.rs  shape.rs  text.rs
src/ui/toolbar/mode/pencil/: bezier.rs  spline.rs
src/ui/toolbar/palette/: io.rs
